# 2024-12-seda-protocol

./: README.md
seda-chain-contracts/: CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  LICENSE  README.md
seda-chain-contracts/.cargo/: config.toml
seda-chain-contracts/contract/: Cargo.toml
seda-chain-contracts/contract/src/: config_test.rs  consts.rs  contract.rs  error.rs  lib.rs  state.rs  test_utils.rs  types.rs  utils.rs
seda-chain-contracts/contract/src/msgs/: enumerable_set.rs  mod.rs
seda-chain-contracts/contract/src/msgs/data_requests/: mod.rs  query.rs  test_helpers.rs  tests.rs
seda-chain-contracts/contract/src/msgs/data_requests/execute/: commit_result.rs  dr_events.rs  mod.rs  post_request.rs  reveal_result.rs  set_timeout_config.rs
seda-chain-contracts/contract/src/msgs/data_requests/state/: data_requests_map.rs  data_requests_map_tests.rs  mod.rs  timeouts.rs  timeouts_tests.rs
seda-chain-contracts/contract/src/msgs/data_requests/sudo/: expire_data_requests.rs  mod.rs  remove_requests.rs
seda-chain-contracts/contract/src/msgs/owner/: mod.rs  query.rs  state.rs  test_helpers.rs  tests.rs  utils.rs
seda-chain-contracts/contract/src/msgs/owner/execute/: accept_ownership.rs  add_to_allowlist.rs  mod.rs  pause.rs  remove_from_allowlist.rs  transfer_ownership.rs  unpause.rs
seda-chain-contracts/contract/src/msgs/staking/: mod.rs  query.rs  test_helpers.rs  tests.rs
seda-chain-contracts/contract/src/msgs/staking/execute/: mod.rs  set_staking_config.rs  stake.rs  staking_events.rs  unstake.rs  withdraw.rs
seda-chain-contracts/contract/src/msgs/staking/state/: is_eligible_for_dr.rs  mod.rs  stakers_map.rs
seda-chain-contracts/fuzz/: Cargo.toml
seda-chain-contracts/fuzz/fuzz_targets/: proxy_instantiate.rs
seda-chain-contracts/xtask/: Cargo.toml
seda-chain-contracts/xtask/src/: main.rs
seda-evm-contracts/: .env.example  .solcover.js  .solhintignore  LICENSE  README.md  bun.lockb  hardhat.config.ts  package.json
seda-evm-contracts/.devcontainer/: Dockerfile  devcontainer.json
seda-evm-contracts/config/: index.ts  networks.ts  types.ts  utils.ts
seda-evm-contracts/contracts/core/: SedaCoreV1.sol
seda-evm-contracts/contracts/interfaces/: IProver.sol  IRequestHandler.sol  IResultHandler.sol  ISedaCore.sol
seda-evm-contracts/contracts/libraries/: SedaDataTypes.sol
seda-evm-contracts/contracts/mocks/: MockProver.sol  Secp256k1ProverResettable.sol  SedaPermissioned.sol
seda-evm-contracts/contracts/provers/: Secp256k1ProverV1.sol
seda-evm-contracts/deployments/: parameters-devnet4.json  parameters-example.json
seda-evm-contracts/docs/: ARCHITECTURE.md
seda-evm-contracts/scripts/: generateTestVectors.ts
seda-evm-contracts/tasks/: index.ts
seda-evm-contracts/tasks/common/: config.ts  io.ts  logger.ts  params.ts  utils.ts
seda-evm-contracts/tasks/tasks/: postRequest.ts  resetProver.ts
seda-evm-contracts/test/core/: RequestHandler.test.ts  ResultHandler.test.ts  (+2 more)
seda-evm-contracts/ts-types/: index.ts
(+24 files in other folders)
