[workspace]
resolver = "2"
members = [
	"contract",
	# "fuzz",
	"xtask",
]

[workspace.package]
rust-version = "1.82.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0"
arbitrary = "1.3"
cosmwasm-schema = "2.2"
cosmwasm-std = "2.2"
cw-multi-test = "2.3"
cw-storage-plus = "2.0"
cw-utils = "2.0"
cw2 = "2.0"
hex = "0.4.3"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
lazy_static = "1.4"
libfuzzer-sys = "0.4"
rand = "0.9"
schemars = { version = "0.8", features = ["semver"] }
seda-common = { git = "https://github.com/sedaprotocol/seda-common-rs.git", tag = "v0.5.3" }
# leaving this in to make local development easier
# seda-common = { path = "../seda-common-rs/crates/common" }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-big-array = { version = "0.5.1" }
serde_json = "1.0"
sha3 = "0.10"
thiserror = { version = "2.0" }
vrf-rs = "0.0.0"
xshell = "0.2"

seda-contract = { path = "./contract" }
