[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
seda-contract.workspace = true
seda-common.workspace = true
semver.workspace = true
serde_json.workspace = true
rand.workspace = true
xshell.workspace = true
